--- a/image_search.html
+++ b/image_search.html
@@ -19,12 +19,28 @@
                     <a class="nav-link" href="advanced_search.html">Advanced search</a>
                 </li>
             </ul>
-            <form action="https://www.google.com/search?tbm=isch">
-                <input type="text" name="q">
-                <input type="submit" value="Image search">
+        </div>
 
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="googlelogo_color_272x92dp.png" class="mx-auto d-block"> 
+                </div>
+            </div>
+            <form action="https://www.google.com/search?tbm=isch" id="form">
+                <div class="row justify-content-center">
+                    <div class="col-6">
+                        <input type="text" class="form-control" name="q">
+                    </div>
+                </div>
+                <div class="row justify-content-center m-3">
+                    <div class="col-2 d-flex justify-content-center">
+                        <input type="submit" class="btn btn-primary" value="Image search">
+                    </div>
+                </div>
             </form>
         </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
