--- a/index.html
+++ b/index.html
@@ -21,25 +21,27 @@
                 </li>
             </ul>
         </div>
-        <div class="container">
-            <figure class="text-center fs-1">
-                Google
-            </figure>
-            <div class="container w-50">
-                <form action="https://www.google.com/search" id="search">
-                    <input class="form-control mb-3 rounded-pill" type="text" name="q">
-                </form>
-            </div>
-        </div>
-        <div class="container w-25">
-            <div class="row justify-content-center">
-                <div class="col-4">
-                    <input class="btn btn-primary" type="submit" value="Google Search" form="search">
-                </div>
-                <div class="col-4">
-                    <input class="btn btn-primary" type="submit" value="I'm feeling lucky" name="btnI" form="search">
+        <div class="container position-absolute top-50 start-50 translate-middle pb-5">
+            <div class="row">
+                <div class="col">
+                    <img src="googlelogo_color_272x92dp.png" class="mx-auto d-block mb-3">
                 </div>
             </div>
+            <form action="https://www.google.com/search">
+                <div class="row justify-content-center">
+                    <div class="col-6">
+                        <input type="text" class="form-control rounded-pill" name="q">
+                    </div>
+                </div>
+                <div class="row justify-content-center m-3 pb-5">
+                    <div class="col-2 d-flex justify-content-center">
+                        <input type="submit" class="btn btn-primary" value="Google Search">
+                    </div>
+                    <div class="col-2 d-flex justify-content-center">
+                        <input type="submit" class="btn btn-primary" name="btnI" value="I'm Feeling Lucky">
+                    </div>
+                </div>
+            </form>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
