--- a/image_search.html
+++ b/image_search.html
@@ -21,8 +21,8 @@
             </ul>
         </div>
 
-        <div class="container">
-            <div class="row">
+        <div class="container position-absolute top-50 start-50 translate-middle pb-5">
+            <div class="row justify-content-center">
                 <div class="col">
                     <img src="googlelogo_color_272x92dp.png" class="mx-auto d-block"> 
                 </div>
@@ -33,7 +33,7 @@
                         <input type="text" class="form-control" name="q">
                     </div>
                 </div>
-                <div class="row justify-content-center m-3">
+                <div class="row justify-content-center m-3 pb-5">
                     <div class="col-2 d-flex justify-content-center">
                         <input type="submit" class="btn btn-primary" value="Image search">
                     </div>
