--- a/image_search.html
+++ b/image_search.html
@@ -30,7 +30,7 @@
             <form action="https://www.google.com/search?tbm=isch" id="form">
                 <div class="row justify-content-center">
                     <div class="col-6">
-                        <input type="text" class="form-control" name="q">
+                        <input type="text" class="form-control rounded-pill" name="q">
                     </div>
                 </div>
                 <div class="row justify-content-center m-3 pb-5">
