finished Image Search

--- a/image_search.html
+++ b/image_search.html
@@ -24,7 +24,7 @@
         <div class="container position-absolute top-50 start-50 translate-middle pb-5">
             <div class="row justify-content-center">
                 <div class="col">
-                    <img src="googlelogo_color_272x92dp.png" class="mx-auto d-block"> 
+                    <img src="googlelogo_color_272x92dp.png" class="mx-auto d-block mb-3"> 
                 </div>
             </div>
             <form action="https://www.google.com/search?tbm=isch" id="form">
