--- a/advanced_search.html
+++ b/advanced_search.html
@@ -61,11 +61,11 @@
             </div>
             <form action="https://www.google.com/search" method="get">
                 <div class="row my-3">
-                    <div class="col-2">
+                    <div class="col-sm-2">
                         <label class="px-4 pt-1" for="1">Include these words: </label>
                     </div>
-                    <div class="col-4">
-                        <input class="form-control" type="text" id="1" name="as_q">
+                    <div class="col-sm-4">
+                        <input class="form-control " type="text" id="1" name="as_q">
                     </div>
                     <div class="col-2 pt-2 text-black-50" id="ltext">
                         input important words: apple pie
